--- a/1911060551_NguyenThienTam_BigSchool/Content/Site.css
+++ b/1911060551_NguyenThienTam_BigSchool/Content/Site.css
@@ -47,3 +47,12 @@ textarea {
     top: 0;
     left: 70px;
 }
+/* Mine*/
+.course > li . action{
+    display:none;
+    left:70px;
+    position: absolute;
+}
+.course > li:hover .action{
+    display:block;
+}
