--- a/1911060551_NguyenThienTam_BigSchool/Views/Shared/_LoginPartial.cshtml
+++ b/1911060551_NguyenThienTam_BigSchool/Views/Shared/_LoginPartial.cshtml
@@ -10,6 +10,7 @@
                     @User.Identity.GetUserName()<span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
+                    <li><a href="@Url.Action("Attending","Courses")">Going I'm Going</a> </li>
                     <li><a href="@Url.Action("Attending","Courses")">Course I'm Going</a></li>
                     <li><a href="#">Lecture I'm Flowing</a></li>
                     <li role="separator" class="divider"></li>
