--- a/1911060551_NguyenThienTam_BigSchool/Views/Shared/_LoginPartial.cshtml
+++ b/1911060551_NguyenThienTam_BigSchool/Views/Shared/_LoginPartial.cshtml
@@ -10,8 +10,8 @@
                     @User.Identity.GetUserName()<span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a href="@Url.Action("Attending","Courses")">Going I'm Going</a> </li>
-                    <li><a href="@Url.Action("Attending","Courses")">Course I'm Going</a></li>
+                    <li><a href="@Url.Action("Mine","Courses")">My Upcomming Courses</a></li>
+                    <li><a href="@Url.Action("Attending","Courses")">Courses I'm Going'</a></li>
                     <li><a href="#">Lecture I'm Flowing</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
