--- a/1911060551_NguyenThienTam_BigSchool/Views/Courses/Mine.cshtml
+++ b/1911060551_NguyenThienTam_BigSchool/Views/Courses/Mine.cshtml
@@ -1,46 +1,70 @@
-﻿@model  IEnumerable<_1911060551_NguyenThienTam_BigSchool.Models.Course>
+﻿@model IEnumerable<_1911060551_NguyenThienTam_BigSchool.Models.Course>
 @{
     ViewBag.Title = "Mine";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Mine</h2>
+
 <ul class="course">
-    @foreach (var course in Model )
-            {
-                <li>
-                    <div class="date">
-                        <div class="month">
-                            @course.DateTime.ToString("MM")
 
-                        </div>
-                        <div class="day">
-                            @course.DateTime.ToString("dd")
+    @foreach (var course in Model)
+    {
+        <li>
+            <div class="date">
+                <div class="month">
+                    @course.DateTime.ToString("MM")
+                </div>
+                <div class="day">
+                    @course.DateTime.ToString("dd")
+                </div>
+            </div>
+            <div class="details">
+                <span class="lecturer">
+                    @course.Lecturer.Name
 
-                        </div>
+                </span>
+                <span class="category">
+                    @course.Category.Name
+                </span>
 
-                    </div>
-                    <div class="details">
-                        <span class="lecturer">
-                            @course.Lecturer.Name
 
-                        </span>
-                        <span class="category">
-                            @course.Category.Name
+            </div>
+            <div class="action">
+                <a href="@Url.Action("Edit", "Courses" ,new {id = course.Id  })">Edit</a> |
 
-                        </span>
+                <a href="#" class="js-cancel-course" data-course-id="@course.Id">Cancel</a>
 
-                    </div>
-                    <div class="action">
-                        <a href="@Url.Action("Edit", "Course", new { id = course.Id })">Edit</a> 
-
-                        
-                        <a href="">Delete</a>
-
-                    </div>
-                </li>
-            }
+            </div>
+        </li>
+    }
 
 </ul>
+@section scripts{
+    <script>
+    $(document).ready(function () {
+        $(".js-cancel-course").click(function (e) {
+            e.preventDefault();
+                       $(e.target); var link =
+            bootbox.confirm("Are you sure to cancel?",
+                function() {
+                    $. ajax({
+                             url: "/api/courses/" + link.attr("data-course-id"),
+                            method: "DELETE"
+                        })
+                        .done (function() {
+                             link.parents("li").fadeOut(function() {
+                                 $(this).remove();
+                             });
+                        })
+                         .fail(function() {
+                             alert("Something failed!");
+                        });
+                });
+        });
+    });
+    </script>
 
 
+
+}
