--- a/1911060551_NguyenThienTam_BigSchool/Views/Home/Index.cshtml
+++ b/1911060551_NguyenThienTam_BigSchool/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model _1911060551_NguyenThienTam_BigSchool.ViewModels.CourseViewModel
+﻿@model _1911060551_NguyenThienTam_BigSchool.ViewModels.CourseViewModel
 
 @{
     ViewBag.Title = "Home Page";
